add engines in package.json

--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "16.15.1",
+    "npm": "8.19.2"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
